# hyp3-OPERA-RTC

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  environment.yml  pyproject.toml  requirements-hyp3.txt  requirements-static.txt  ruff.toml  runconfig.yml
.github/workflows/: release.yml  static-analysis.yml  test-and-build.yml  test.yml
scripts/: rtc_compare.py
src/hyp3_opera_rtc/: __init__.py  __main__.py  corvette.py  corvette_geogrid.py  corvette_opts.py  corvette_single.py  dem.py  opera_rtc.py  orbit.py  prep_burst.py  prep_rtc.py  prep_slc.py  process.py  upload_rtc.py  utils.py
src/hyp3_opera_rtc/defaults/: runconfig.yml
src/hyp3_opera_rtc/etc/: entrypoint.sh
src/hyp3_opera_rtc/templates/: pge.yml  pge.yml.j2  runconfig.yml  sas.yml  sas_template.yml
tests/: test_dem.py  test_entrypoints.py  test_prep_burst.py  test_prep_rtc.py  test_upload_rtc.py
tests/data/: S1A_IW_SLC__1SDV_20250413T020809_20250413T020836_058732_07464F_EF1E_VV.xml  burst_response.json  opera_v1.0.iso.xml  rtc_output_files.json  test.h5  test.iso.xml  updated-opera_v1.0.iso.xml
