[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hyp3_opera_rtc"
requires-python = ">=3.10"
authors = [
    {name="tools-bot", email="UAF-asf-apd@alaska.edu"},
]
description = "HyP3 plugin for OPERA-RTC processing"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "hyp3lib>=3,<4",
    "asf_search",
    "rasterio",
    "dem_stitcher"
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "pytest-console-scripts",
]

[project.urls]
Homepage = "https://github.com/ASFHyP3/hyp3-OPERA-RTC"
Documentation = "https://hyp3-docs.asf.alaska.edu"

[project.entry-points.hyp3]
prep_slc = "hyp3_opera_rtc.prep_slc:main"
opera_rtc = "hyp3_opera_rtc.opera_rtc:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
